<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.vassalengine</groupId>
  <artifactId>module-template</artifactId>
  <version>1.0.0-SNAPSHOT</version>

  <properties>
    <!-- set Vassal version here -->
    <vassal.version>3.7.10</vassal.version>

    <!-- set Java version here -->
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>

    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.vassalengine</groupId>
      <artifactId>vassal-app</artifactId>
      <version>${vassal.version}</version>
    </dependency>
  </dependencies>

  <repositories>
    <repository>
      <id>vassal-releases</id>
      <url>https://www.vassalengine.org/maven/</url>
    </repository>
  </repositories>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version>
        <configuration>
          <showDeprecation>true</showDeprecation>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
